# tiw

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: default-variant.yaml
game/: Faction.cpp  Faction.h  Order.cpp  Order.h  Territory.cpp  Territory.h
utils/: ScriptParser.cpp  ScriptParser.h  commands.cpp  commands.h
